k8s-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: k8s-swagger-service
  labels:
    app: k8s-jenkins
spec:
#  type: LoadBalancer
#  loadBalancerIP: 114.32.6.178
#  loadBalancerIP: 192.168.99.105
  ports:
    - protocol: TCP
      port: 80  # 對外開放的port
      targetPort: 1689  # pod 所用的port
      name: http
#      nodePort: 30750  # 外面接近來的port
  selector:
    app: k8s-jenkins
