k8s-ingress.yaml
# ingress.yaml

---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: swaggerweb
  labels:
    app: k8s-jenkins
  annotations:
    kubernetes.io/ingress.global-static-ip-name:  k8s-swagger-service-ip
#    nginx.ingress.kubernetes.io/ssl-redirect: \"false\"
#spec:
#  backend:
#    serviceName: swaggerweb-backend
#    servicePort: 80
#spec:
#  rules:
#  - http:
#      paths:
#      - path: /ohya
#        backend:
#          serviceName: k8s-swagger-service
#          servicePort: 80
spec:
  rules:
  - host: ohya.stock.gogogo
    http:
      paths:
        - path:
          backend:
            serviceName: k8s-swagger-service
            servicePort: 80

#---
#apiVersion: v1
#kind: Service
#metadata:
#  name: swaggerweb-backend
#  labels:
#    app: k8s-jenkins
#spec:
#  type: NodePort
#  selector:
#    app: k8s-jenkins
#    tier: web
#  ports:
#  - port: 80
#    targetPort: 80
